force-app/main/default/objects/Customer_Main_Bank_Info__c/Customer_Main_Bank_Info__c.object-meta.xml
<CustomObject>
    <label>Customer Main Bank Info</label>
    <nameField>
        <displayFormat>MB-{000000}</displayFormat>
        <label>Customer Main Bank Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Main Bank Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>