force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>As of Date</label>
    <type>Date</type>
</CustomField>