force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Main Bank Infos</relationshipLabel>
    <relationshipName>Customer_Main_Bank_Infos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>