force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Last 14 digits of Customer TMB + Main Bank Calculation Date (CUST_ID+AS_OF_DATE)
Used as External Id for upsert job from data batch job.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>