force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/Is_Current_BM_RM__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_BM_RM__c</fullName>
    <formula>$User.Id =  Customer__r.RTL_Wealth_RM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current BM/RM</label>
    <type>Checkbox</type>
</CustomField>