force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/Is_Main_Bank__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Bank__c</fullName>
    <formula>IF(TEXT(Main_Bank_Status__c) = &quot;Y&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Main Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>