force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/IsCurrentRmBm__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentRmBm__c</fullName>
    <formula>Customer__r.RTL_Commercial_RM__c ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current RM/BM</label>
    <type>Checkbox</type>
</CustomField>