force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/Main_Bank_Status__c.field-meta.xml
<CustomField>
    <fullName>Main_Bank_Status__c</fullName>
    <label>Main Bank Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>FALSE</fullName>
                <isActive>false</isActive>
                <label>FALSE</label>
            </value>
            <value>
                <fullName>TRUE</fullName>
                <isActive>false</isActive>
                <label>TRUE</label>
            </value>
            <value>
                <fullName>flower</fullName>
                <isActive>false</isActive>
                <label>flower</label>
            </value>
            <value>
                <fullName>xyz status</fullName>
                <isActive>false</isActive>
                <label>xyz status</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>