force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/TMB_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Customer_ID__c</fullName>
    <formula>Customer__r.TMB_Customer_ID_PE__c</formula>
    <label>TMB Customer ID</label>
    <type>Text</type>
</CustomField>