force-app/main/default/objects/Customer_Main_Bank_Info__c/fields/WealthRmBm__c.field-meta.xml
<CustomField>
    <fullName>WealthRmBm__c</fullName>
    <formula>Customer__r.RTL_Wealth_RM__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WealthRmBm</label>
    <type>Text</type>
</CustomField>